objects/SDOC__SDocsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>SDOC__ConnectedAppCertificateName__c</fullName>
        <description>Name of the certificate Record you used to sign the SDocs connected App.
In the Connected App settings, under the API (Enable OAuth Settings) header a Digital Signature was uploaded. This corresponds the the name (Label) of the certificate record.</description>
        <inlineHelpText>Name of the certificate Record you used to sign the SDocs connected App.
In the Connected App settings, under the API (Enable OAuth Settings) header a Digital Signature was uploaded. This corresponds the the name (Label) of the certificate record.</inlineHelpText>
        <label>ConnectedAppCertificateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppConsumerKey__c</fullName>
        <description>Consumer Key for the SDocs connected App.
In the Connected App settings record for S-Docs, under the API (Enable OAuth Settings) header section, look for the field labeled a field labeled &quot;Consumer Key&quot;.</description>
        <inlineHelpText>Consumer Key for the SDocs connected App.
In the Connected App settings record for S-Docs, under the API (Enable OAuth Settings) header section, look for the field labeled a field labeled &quot;Consumer Key&quot;.</inlineHelpText>
        <label>ConnectedAppConsumerKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppLoginURL__c</fullName>
        <defaultValue>&quot;https://login.salesforce.com&quot;</defaultValue>
        <description>Production: https://login.salesforce.com
Sandbox: https://test.salesforce.com</description>
        <inlineHelpText>Production: https://login.salesforce.com
Sandbox: https://test.salesforce.com</inlineHelpText>
        <label>ConnectedAppLoginURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDOC__ConnectedAppUserName__c</fullName>
        <description>Optional - only if you want the the process to run under a specific user. If a userName is not provided in the call, then this user will be used.</description>
        <inlineHelpText>Optional - only if you want the the process to run under a specific user. If a userName is not provided in the call, then this user will be used.</inlineHelpText>
        <label>ConnectedAppUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SDocsSettings</label>
</CustomObject>